// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`review-documents-view it renders ReviewDocuments correctly on state DocumentsRequestedAppointment 1`] = `
<div>
  <div
    data-testid="changeofname-ReviewDocuments"
  >
    <div
      class="mtfh-box"
    >
      <div
        class="mtfh-status-box"
      >
        <svg
          fill="none"
          height="45"
          viewBox="0 0 45 45"
          width="45"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="22.5"
            cy="22.5"
            fill="white"
            r="21.75"
            stroke="#0B0C0C"
            stroke-width="1.5"
          />
          <path
            d="M20.2251 12.7026C20.2251 11.1991 21.0627 10.4473 22.7378 10.4473C24.4129 10.4473 25.2505 11.1991 25.2505 12.7026C25.2505 13.4191 25.0386 13.9792 24.6147 14.3828C24.201 14.7764 23.5754 14.9731 22.7378 14.9731C21.0627 14.9731 20.2251 14.2163 20.2251 12.7026ZM25.0386 34H20.4219V17.0771H25.0386V34Z"
            fill="#0B0C0C"
          />
        </svg>
        <div>
          <div
            class="mtfh-status-heading__title"
          >
            <h4
              class="lbh-heading-h4"
            >
              Office appointment scheduled
            </h4>
          </div>
          <p
            class="lbh-body-m"
            style="margin-top: 15px;"
          >
            Date: 
            Monday 12th October 2099
            <br />
            Time: 
            08:59 am
          </p>
          <div
            style="display: flex; flex-direction: column; align-items: flex-start; margin-top: 15px;"
          >
            <button
              class="govuk-link lbh-link"
              type="button"
            >
              Change
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style="padding-bottom: 35px;"
    />
    <form
      action="#"
      class="review-documents-form"
      id="review-documents-form"
      novalidate=""
    >
      <h4
        class="lbh-heading-h4"
      >
        Use the form below to record the documents you have checked:
      </h4>
      <div
        class="govuk-form-group lbh-form-group"
        id="review-documents-form-group"
      >
        <label
          class="govuk-label lbh-label"
          for="review-documents-form-group-field"
        >
          
          
        </label>
        <div
          class="govuk-checkboxes lbh-checkboxes"
          id="review-documents-form-group-field"
        >
          <div
            class="govuk-checkboxes__item"
          >
            <input
              aria-describedby="seen-photographic-id-hint"
              class="govuk-checkboxes__input"
              id="seen-photographic-id"
              name="seenPhotographicId"
              type="checkbox"
              value="false"
            />
            <label
              class="govuk-label govuk-checkboxes__label"
              for="seen-photographic-id"
            >
              I confirm I have seen a government issue photographic ID
            </label>
            <span
              class="govuk-hint govuk-checkboxes__hint lbh-hint"
              id="seen-photographic-id-hint"
            >
              (for example: valid passport, driving licence)
            </span>
          </div>
          <div
            class="govuk-checkboxes__item"
          >
            <input
              aria-describedby="seen-second-id-hint"
              class="govuk-checkboxes__input"
              id="seen-second-id"
              name="seenSecondId"
              type="checkbox"
              value="false"
            />
            <label
              class="govuk-label govuk-checkboxes__label"
              for="seen-second-id"
            >
              I confirm I have seen a second form of ID (does not have to be photographic)
            </label>
            <span
              class="govuk-hint govuk-checkboxes__hint lbh-hint"
              id="seen-second-id-hint"
            >
              (for example: utility bill, bank statement, council letter)
            </span>
          </div>
          <div
            class="govuk-checkboxes__item"
          >
            <input
              class="govuk-checkboxes__input"
              id="confirmation-for-valid-documents"
              name="atLeastOneDocument"
              type="checkbox"
              value="false"
            />
            <label
              class="govuk-label govuk-checkboxes__label"
              for="confirmation-for-valid-documents"
            >
              I confirm I have seen a valid example of one of the following documents
              <br />
              1
              .
              Marriage certificate
              <br />
              2
              .
              Civil partnership certificate
              <br />
              3
              .
              Decree absolute
              <br />
              4
              .
              Final order
              <br />
              5
              .
              Deed poll document
              <br />
              6
              .
              Statutory declaration
            </label>
          </div>
        </div>
      </div>
      <button
        class="govuk-button lbh-button"
        disabled=""
        style="width: 222px;"
        type="submit"
      >
        Next
      </button>
    </form>
  </div>
</div>
`;

exports[`review-documents-view it renders ReviewDocuments correctly on state DocumentsRequestedDes 1`] = `
<div>
  <h2
    class="lbh-heading-h2"
  >
    <div>
      <a
        class="govuk-link lbh-link lbh-link--no-visited-state"
        href="/person/6fbe024f-2316-4265-a6e8-d65a837e308a"
        target="_blank"
      >
        Haylee
         
        Macejkovic
      </a>
    </div>
  </h2>
  <div
    class="mtfh-box mtfh-box--success"
  >
    <div
      class="mtfh-status-heading"
    >
      <svg
        fill="none"
        height="45"
        viewBox="0 0 45 45"
        width="45"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="22.5"
          cy="22.5"
          fill="white"
          r="21.75"
          stroke="#00664F"
          stroke-width="1.5"
        />
        <path
          clip-rule="evenodd"
          d="M35 15.5127L18.775 33L11 24.6201L14.2591 21.1074L18.775 25.9746L31.7409 12L35 15.5127Z"
          fill="#00664F"
          fill-rule="evenodd"
        />
      </svg>
      <h4
        class="lbh-heading-h4 mtfh-status-heading__title"
      >
        Documents requested
      </h4>
    </div>
    <div
      class="govuk-link lbh-link lbh-link--no-visited-state"
      style="margin-left: 60px; margin-top: 17.5px;"
    >
      <a
        class="govuk-link lbh-link lbh-link--no-visited-state"
        href="http://des/teams/1/dashboard/requests"
        target="_blank"
      >
        View request in Document Evidence Store
      </a>
    </div>
  </div>
  <div
    data-testid="changeofname-ReviewDocuments"
  >
    <div
      class="govuk-checkboxes__item"
    >
      <input
        class="govuk-checkboxes__input"
        id="condition"
        type="checkbox"
      />
      <label
        class="govuk-label govuk-checkboxes__label"
        for="condition"
      >
        I need to make an appointment to check supporting documents
      </label>
    </div>
    <div
      style="padding-bottom: 35px;"
    />
    <form
      action="#"
      class="review-documents-form"
      id="review-documents-form"
      novalidate=""
    >
      <h4
        class="lbh-heading-h4"
      >
        Use the form below to record the documents you have checked:
      </h4>
      <div
        class="govuk-form-group lbh-form-group"
        id="review-documents-form-group"
      >
        <label
          class="govuk-label lbh-label"
          for="review-documents-form-group-field"
        >
          
          
        </label>
        <div
          class="govuk-checkboxes lbh-checkboxes"
          id="review-documents-form-group-field"
        >
          <div
            class="govuk-checkboxes__item"
          >
            <input
              aria-describedby="seen-photographic-id-hint"
              class="govuk-checkboxes__input"
              id="seen-photographic-id"
              name="seenPhotographicId"
              type="checkbox"
              value="false"
            />
            <label
              class="govuk-label govuk-checkboxes__label"
              for="seen-photographic-id"
            >
              I confirm I have seen a government issue photographic ID
            </label>
            <span
              class="govuk-hint govuk-checkboxes__hint lbh-hint"
              id="seen-photographic-id-hint"
            >
              (for example: valid passport, driving licence)
            </span>
          </div>
          <div
            class="govuk-checkboxes__item"
          >
            <input
              aria-describedby="seen-second-id-hint"
              class="govuk-checkboxes__input"
              id="seen-second-id"
              name="seenSecondId"
              type="checkbox"
              value="false"
            />
            <label
              class="govuk-label govuk-checkboxes__label"
              for="seen-second-id"
            >
              I confirm I have seen a second form of ID (does not have to be photographic)
            </label>
            <span
              class="govuk-hint govuk-checkboxes__hint lbh-hint"
              id="seen-second-id-hint"
            >
              (for example: utility bill, bank statement, council letter)
            </span>
          </div>
          <div
            class="govuk-checkboxes__item"
          >
            <input
              class="govuk-checkboxes__input"
              id="confirmation-for-valid-documents"
              name="atLeastOneDocument"
              type="checkbox"
              value="false"
            />
            <label
              class="govuk-label govuk-checkboxes__label"
              for="confirmation-for-valid-documents"
            >
              I confirm I have seen a valid example of one of the following documents
              <br />
              1
              .
              Marriage certificate
              <br />
              2
              .
              Civil partnership certificate
              <br />
              3
              .
              Decree absolute
              <br />
              4
              .
              Final order
              <br />
              5
              .
              Deed poll document
              <br />
              6
              .
              Statutory declaration
            </label>
          </div>
        </div>
      </div>
      <button
        class="govuk-button lbh-button"
        disabled=""
        style="width: 222px;"
        type="submit"
      >
        Next
      </button>
    </form>
  </div>
  <div
    data-testid="close-case-button"
  >
    <p
      class="lbh-body-m"
    >
      If the documents are not suitable and all avenues to obtain the right documents have been exhausted, then close the case.
    </p>
    <button
      class="govuk-button lbh-button govuk-button--secondary lbh-button--secondary"
      style="width: 222px;"
      type="button"
    >
      Close Case
    </button>
  </div>
</div>
`;

exports[`review-documents-view it renders ReviewDocuments correctly on state=ProcessClosed and previousState=DocumentsRequestedAppointment 1`] = `
<div>
  <h2
    class="lbh-heading-h2"
  >
    <div>
      <a
        class="govuk-link lbh-link lbh-link--no-visited-state"
        href="/person/6fbe024f-2316-4265-a6e8-d65a837e308a"
        target="_blank"
      >
        Haylee
         
        Macejkovic
      </a>
    </div>
  </h2>
  <div
    data-testid="changeofname-ReviewDocuments"
  >
    <div
      class="mtfh-box"
    >
      <div
        class="mtfh-status-box"
      >
        <svg
          fill="none"
          height="45"
          viewBox="0 0 45 45"
          width="45"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="22.5"
            cy="22.5"
            fill="white"
            r="21.75"
            stroke="#0B0C0C"
            stroke-width="1.5"
          />
          <path
            d="M20.2251 12.7026C20.2251 11.1991 21.0627 10.4473 22.7378 10.4473C24.4129 10.4473 25.2505 11.1991 25.2505 12.7026C25.2505 13.4191 25.0386 13.9792 24.6147 14.3828C24.201 14.7764 23.5754 14.9731 22.7378 14.9731C21.0627 14.9731 20.2251 14.2163 20.2251 12.7026ZM25.0386 34H20.4219V17.0771H25.0386V34Z"
            fill="#0B0C0C"
          />
        </svg>
        <div>
          <div
            class="mtfh-status-heading__title"
          >
            <h4
              class="lbh-heading-h4"
            >
              Office appointment missed
            </h4>
          </div>
          <p
            class="lbh-body-m"
            style="margin-top: 15px;"
          >
            Date: 
            Monday 12th October 2099
            <br />
            Time: 
            08:59 am
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mtfh-box mtfh-box--warning"
  >
    <div
      class="mtfh-status-box"
    >
      <svg
        fill="none"
        height="45"
        viewBox="0 0 45 45"
        width="45"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="22.5"
          cy="22.5"
          fill="white"
          r="21.75"
          stroke="#BE3A34"
          stroke-width="1.5"
        />
        <path
          d="M24.2969 26.6587H20.6035L19.8315 11.8701H25.0688L24.2969 26.6587ZM19.771 31.8354C19.771 30.9878 19.998 30.347 20.4521 29.9131C20.9062 29.4792 21.5672 29.2622 22.4351 29.2622C23.2726 29.2622 23.9185 29.4842 24.3726 29.9282C24.8368 30.3722 25.0688 31.008 25.0688 31.8354C25.0688 32.6326 24.8368 33.2633 24.3726 33.7275C23.9084 34.1816 23.2625 34.4087 22.4351 34.4087C21.5874 34.4087 20.9315 34.1867 20.4673 33.7427C20.0031 33.2886 19.771 32.6528 19.771 31.8354Z"
          fill="#BE3A34"
        />
      </svg>
      <div>
        <div
          class="mtfh-status-heading__title"
        >
          <h4
            class="lbh-heading-h4"
          >
            Change of name application cancelled 
          </h4>
        </div>
        <p
          class="lbh-body-m"
          style="margin-top: 15px;"
        >
          Test
        </p>
      </div>
    </div>
  </div>
  <h3
    class="lbh-heading-h3"
  >
    Thank you for your confirmation
  </h3>
  <ul
    class="lbh-list lbh-list--bullet"
    style="margin-left: 1em;"
  >
    <li>
      <p
        class="lbh-body-s"
      >
        This case is now closed and we have recorded this on the system - that you have sent an outcome letter to the resident. The outcome can be viewed in the activity history.
      </p>
    </li>
  </ul>
  <div
    style="margin-top: 1em;"
  >
    <a
      class="govuk-back-link lbh-back-link lbh-link--no-visited-state"
      href="/"
    >
      Return to home page
    </a>
  </div>
</div>
`;

exports[`review-documents-view it renders ReviewDocuments correctly on state=ProcessClosed and previousState=DocumentsRequestedDes 1`] = `
<div>
  <h2
    class="lbh-heading-h2"
  >
    <div>
      <a
        class="govuk-link lbh-link lbh-link--no-visited-state"
        href="/person/6fbe024f-2316-4265-a6e8-d65a837e308a"
        target="_blank"
      >
        Haylee
         
        Macejkovic
      </a>
    </div>
  </h2>
  <div
    class="mtfh-box mtfh-box--success"
  >
    <div
      class="mtfh-status-heading"
    >
      <svg
        fill="none"
        height="45"
        viewBox="0 0 45 45"
        width="45"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="22.5"
          cy="22.5"
          fill="white"
          r="21.75"
          stroke="#00664F"
          stroke-width="1.5"
        />
        <path
          clip-rule="evenodd"
          d="M35 15.5127L18.775 33L11 24.6201L14.2591 21.1074L18.775 25.9746L31.7409 12L35 15.5127Z"
          fill="#00664F"
          fill-rule="evenodd"
        />
      </svg>
      <h4
        class="lbh-heading-h4 mtfh-status-heading__title"
      >
        Documents requested
      </h4>
    </div>
    <div
      class="govuk-link lbh-link lbh-link--no-visited-state"
      style="margin-left: 60px; margin-top: 17.5px;"
    >
      <a
        class="govuk-link lbh-link lbh-link--no-visited-state"
        href="http://des/teams/1/dashboard/requests"
        target="_blank"
      >
        View request in Document Evidence Store
      </a>
    </div>
  </div>
  <div
    data-testid="changeofname-ReviewDocuments"
  />
  <div
    class="mtfh-box mtfh-box--warning"
  >
    <div
      class="mtfh-status-box"
    >
      <svg
        fill="none"
        height="45"
        viewBox="0 0 45 45"
        width="45"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="22.5"
          cy="22.5"
          fill="white"
          r="21.75"
          stroke="#BE3A34"
          stroke-width="1.5"
        />
        <path
          d="M24.2969 26.6587H20.6035L19.8315 11.8701H25.0688L24.2969 26.6587ZM19.771 31.8354C19.771 30.9878 19.998 30.347 20.4521 29.9131C20.9062 29.4792 21.5672 29.2622 22.4351 29.2622C23.2726 29.2622 23.9185 29.4842 24.3726 29.9282C24.8368 30.3722 25.0688 31.008 25.0688 31.8354C25.0688 32.6326 24.8368 33.2633 24.3726 33.7275C23.9084 34.1816 23.2625 34.4087 22.4351 34.4087C21.5874 34.4087 20.9315 34.1867 20.4673 33.7427C20.0031 33.2886 19.771 32.6528 19.771 31.8354Z"
          fill="#BE3A34"
        />
      </svg>
      <div>
        <div
          class="mtfh-status-heading__title"
        >
          <h4
            class="lbh-heading-h4"
          >
            Change of name application cancelled 
          </h4>
        </div>
        <p
          class="lbh-body-m"
          style="margin-top: 15px;"
        >
          Test
        </p>
      </div>
    </div>
  </div>
  <h3
    class="lbh-heading-h3"
  >
    Thank you for your confirmation
  </h3>
  <ul
    class="lbh-list lbh-list--bullet"
    style="margin-left: 1em;"
  >
    <li>
      <p
        class="lbh-body-s"
      >
        This case is now closed and we have recorded this on the system - that you have sent an outcome letter to the resident. The outcome can be viewed in the activity history.
      </p>
    </li>
  </ul>
  <div
    style="margin-top: 1em;"
  >
    <a
      class="govuk-back-link lbh-back-link lbh-link--no-visited-state"
      href="/"
    >
      Return to home page
    </a>
  </div>
</div>
`;
